--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,3 +6,8 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: [ self-hosted ]
+    
+    steps:
+    - name: run the tests
+      run: | 
+        npm run test
