--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: [ self-hosted ]
     
     steps:
-    - name: run the tests
-      run: | 
+     - uses: actions/checkout@v2
+       name: Clone project
+    
+     - name: run the tests
+       run: | 
         npm run test
